# todo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
.github/workflows/: ci.yml
app/: main.cpp
blogs/: 01_motivation.md
cmake/: dependencies.cmake  greeterConfig.cmake.in  options.cmake  targets.cmake  tests.cmake  warnings.cmake
include/english_greeter/: greet.hpp
include/spanish_greeter/: saludar.hpp
src/: greet.cpp  main.cpp  saludar.cpp
tests/: test_api.cpp  test_smoke.cpp
